// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-footer-link should render small with grouped links: small-footer-link-with-grouped-links 1`] = `
<ic-footer-link class="footer-link footer-link-grouped-small footer-link-light" href="/" role="listitem">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <ic-link class="footer-link" href="/">
      <slot></slot>
    </ic-link>
  </template>
  Link
</ic-footer-link>
`;

exports[`ic-footer-link should render: footer-link 1`] = `
<ic-footer-link class="footer-link footer-link-light footer-link-ungrouped-sparse" href="/" role="listitem">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <ic-link class="footer-link" href="/">
      <slot></slot>
    </ic-link>
  </template>
  Link
</ic-footer-link>
`;
